--- a/public/template.html
+++ b/public/template.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <link rel="stylesheet" type="text/css" href="/main.bundle.css" />
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
         <div id="app" />
+        <script src="/bundle.js" async defer></script>
     </body>
 </html>
